--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "serverless-sd-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "carlosescor2199.github.io/serverless-sd",
+  "homepage": "http://carlosescor2199.github.io/serverless-sd",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
